--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ tensorflow==2.13.0
 tf-keras==0.1.0
 urllib3==1.26.15
 
+# works with py 3.9 , latest versions of py doesn't support tenserflow & deepface 
 # try to install the latest version of the packages, 
 #if latest versions of these packages are not compatible with your system, 
 # then try to install given versions 
